# mtr-ng

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  DISTRIBUTION.md  LICENSE  README.md  TESTING.md  justfile  test_results.txt
.cursor/: architecture.md  changelog.md  instructions.md
.github/workflows/: ci.yml  release.yml
Formula/: mtr-ng.rb
install/: install.sh  mtr-ng.1
packaging/: PKGBUILD
packaging/debian/: control
scripts/: bump-version.sh  setup-capabilities.sh  test-dev.sh  test.sh
src/: args.rs  hop_stats.rs  lib.rs  main.rs  probe.rs  report.rs  session.rs  sixel.rs  ui.rs  utils.rs
src/ui/: events.rs  main.rs  mod.rs  state.rs  visualization.rs  widgets.rs
