[package]
name = "mtr-ng"
version = "0.1.4"
edition = "2021"
description = "A modern, feature-rich implementation of My Traceroute (MTR) with real-time network path visualization"
license = "MIT OR Apache-2.0"
authors = ["Edwin de Jong <edejong@fastmail.fm>"]
repository = "https://github.com/edejong-dbc/mtr-ng"
homepage = "https://github.com/edejong-dbc/mtr-ng"
documentation = "https://github.com/edejong-dbc/mtr-ng#readme"
readme = "README.md"
keywords = ["network", "traceroute", "mtr", "networking", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]
exclude = [
    "test_*.txt",
    "target/",
    ".git/",
    ".github/",
    "*.log"
]

# Metadata for package managers
[package.metadata.deb]
maintainer = "Edwin de Jong <edejong@fastmail.fm>"
copyright = "2024, Edwin de Jong <edejong@fastmail.fm>"
license-file = ["LICENSE", "4"]
extended-description = """
MTR-NG is a modern implementation of the My Traceroute (MTR) network diagnostic tool.
It combines the functionality of traceroute and ping in a single tool with beautiful
Unicode sparklines, real-time visualization, jitter analysis, and advanced column
customization. Perfect for network troubleshooting and monitoring.
"""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/mtr-ng", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mtr-ng/", "644"],
    ["LICENSE", "usr/share/doc/mtr-ng/", "644"],
    ["install/mtr-ng.1", "usr/share/man/man1/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/mtr-ng", dest = "/usr/bin/mtr-ng", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/mtr-ng/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/mtr-ng/LICENSE", mode = "644" },
    { source = "install/mtr-ng.1", dest = "/usr/share/man/man1/mtr-ng.1", mode = "644" },
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime and networking
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"

# Network operations
socket2 = "0.5"
pnet = "0.34"

# Terminal UI and graphics
crossterm = "0.28"
ratatui = "0.29"
unicode-width = "0.2"

# Data structures and utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Random number generation
rand = "0.8"

# Raw socket operations
libc = "0.2"

# DNS resolution - migrated from trust-dns (unmaintained) to hickory-dns
hickory-resolver = "0.24"

# Sixel graphics (manual implementation)

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mtr-ng"
path = "src/main.rs"




